# epub-to-md

./: .gitignore  README.md  build.bat  build.sh  create_icon.py  epub_converter.py  epub_to_md.py  epub_to_md_gui.py  pyproject.toml
scripts/: build.bat  build.sh  create_icon.py
src/epub_to_md/: __init__.py
src/epub_to_md/cli/: __init__.py  main.py
src/epub_to_md/core/: __init__.py  converter.py
src/epub_to_md/gui/: __init__.py  main.py
tests/: __init__.py
