[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-to-md"
version = "0.1.0"
description = "Convert EPUB files to clean Markdown format"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["epub", "markdown", "converter", "ebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pillow",
]

[project.scripts]
epub-to-md = "epub_to_md.cli.main:main"

[project.gui-scripts]
epub-to-md-gui = "epub_to_md.gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"epub_to_md.assets" = ["*.ico", "*.png"]
